# SpaceGame

./: .pre-commit-config.yaml  main.py  pyproject.toml
animations/: __init__.py  curses_tools.py  fire.py  physics.py  space.py  space_garbage.py  space_ship.py
